# SkP2_DRF_online_courses

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
fixtures/: courses.json  groups.json  lessons.json  payments.json  users.json
lessons/: admin.py  models.py  pagination.py  serializers.py  services.py  task.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_lesson_course_alter_lesson_video_url.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_course.py  0005_subscriptions.py  0006_alter_lesson_options.py  0007_course_amount_lesson_amount.py  0008_course_date_modified_lesson_date_modified.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: superuser.py  user.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_payment_is_paid_payment_payment_url_and_more.py
